updates for collapseable functionality

--- a/new_bio.html
+++ b/new_bio.html
@@ -7,6 +7,9 @@
   <meta charset="UTF-8">
   <title>CSS Stylesheets with Relative Paths</title>
 <link rel="stylesheet" type="text/css" href="new_bio.css">
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script type="text/javascript" src="javascript.js"></script>
+
 
 <!--<style type="text/css"> -->
 
@@ -27,7 +30,13 @@
       <h2>Jeff DuBois</h2>
       <img id="bio-image" src="https://lh3.googleusercontent.com/itae0utc98bAd8tvUYv1KCygwXs1Y1olScPrewwgEd8GvRobTLnPeEABg35T3aozV6XSgcL-iU0xy7LEeCpuGWgAqRa5jdfybBt-V_NNZplmiPTHUtxSuzhP93TheTbfUbTuzxYwgoLgMWSR2oyUUMbHLgiAnR61GzmXoXhSttN2pT0i2FBO2LnzF9Bawl24MJolIhYlf5fUdq66oHrnk6MKRzAoETTxbsN1OpVREDNULoWfvZqCSOzPdF837EgxxUh6XyQjF8ffDwazgo6uAKW7PGcNvuge-gBUN2r1eSCJpnRDGS5quqV1VJ8HfbVTbFJt0tc3wb7SdyzZ6b7YgDqTN7FnB5anvcW5vVKW58yk_egMNISDZEPsCpFAEdRqlk197vALHiiHcQRGyQQLu2y-nkuw7S9lISt0FAZPOdXIivfV4XueTqNTNLkefH1VC3V7ch5sbCktDoDho6TfZ15neEnTiniSfg2-VgRcEfEf_uf_Es23mrzDdA3rgBHMvTAC5M5cuupzjgKKiRp8vnTX6eVnxTNlEWUpwox04h3NRjwld-iqGP__8pBhnSrGQmsr2ZxQqmHrW6u_5MZr8z8Mq5nS1TLdq2TUBDCZ=w635-h793-no" alt="Jeffery DuBois">
 
-      <p>Jeff DuBois is software Senior Developer who is passionate about providing creative software solutions for enhancing system functionality and maintenance.</p> <p>Experienced in all facets of product development life cycle from analysis and design through development, implementation, documentation and user training. Reputation for providing quality work through analysis of options, productive testing and strong organizational skills.</p><br>
+      <p>Jeff DuBois is a software Senior Developer who is passionate about providing creative software solutions for enhancing system functionality and maintenance.</p>
+      <div class="expandContent" id="expandContentid">
+          <a href=#">Less</a>
+        </div>
+      <div id="collapseid" class=collapseclass"  /><p>Experienced in all facets of product development life cycle from analysis and design through development, implementation, documentation and user training. Reputation for providing quality work through analysis of options, productive testing and strong organizational skills.</p>
+	  <!-- <div id="collapseid" class=collapseclass" style="display:none" />  -->
+      </div><br>
     </section>
 
     <section id="#contact-info">
