--- a/new_bio.html
+++ b/new_bio.html
@@ -31,17 +31,15 @@
       <img id="bio-image" src="https://lh3.googleusercontent.com/itae0utc98bAd8tvUYv1KCygwXs1Y1olScPrewwgEd8GvRobTLnPeEABg35T3aozV6XSgcL-iU0xy7LEeCpuGWgAqRa5jdfybBt-V_NNZplmiPTHUtxSuzhP93TheTbfUbTuzxYwgoLgMWSR2oyUUMbHLgiAnR61GzmXoXhSttN2pT0i2FBO2LnzF9Bawl24MJolIhYlf5fUdq66oHrnk6MKRzAoETTxbsN1OpVREDNULoWfvZqCSOzPdF837EgxxUh6XyQjF8ffDwazgo6uAKW7PGcNvuge-gBUN2r1eSCJpnRDGS5quqV1VJ8HfbVTbFJt0tc3wb7SdyzZ6b7YgDqTN7FnB5anvcW5vVKW58yk_egMNISDZEPsCpFAEdRqlk197vALHiiHcQRGyQQLu2y-nkuw7S9lISt0FAZPOdXIivfV4XueTqNTNLkefH1VC3V7ch5sbCktDoDho6TfZ15neEnTiniSfg2-VgRcEfEf_uf_Es23mrzDdA3rgBHMvTAC5M5cuupzjgKKiRp8vnTX6eVnxTNlEWUpwox04h3NRjwld-iqGP__8pBhnSrGQmsr2ZxQqmHrW6u_5MZr8z8Mq5nS1TLdq2TUBDCZ=w635-h793-no" alt="Jeffery DuBois">
 
       <p>Jeff DuBois is a software Senior Developer who is passionate about providing creative software solutions for enhancing system functionality and maintenance.</p>
-      <div class="expandContent" id="expandContentid">
-          <a href=#">Less</a>
-        </div>
-      <div id="collapseid" class=collapseclass"  /><p>Experienced in all facets of product development life cycle from analysis and design through development, implementation, documentation and user training. Reputation for providing quality work through analysis of options, productive testing and strong organizational skills.</p>
-	  <!-- <div id="collapseid" class=collapseclass" style="display:none" />  -->
-      </div><br>
+           <a id="lessid" href="#">Less...</a> 
+           <a id="moreid" href="#">More...</a> 
+      <div id="collapseid" class="collapseclass" ><p >Experienced in all facets of product development life cycle from analysis and design through development, implementation, documentation and user training. Reputation for providing quality work through analysis of options, productive testing and strong organizational skills.</p>
+      </div>
     </section>
 
     <section id="#contact-info">
       <h2>Contact Info</h2>
-      <ul>
+      <ul id="listid">
         <li><strong>Email:</strong> <a href="#">jeff.adubois@gmail.com</a></li>
         <li><strong>Github:</strong> <a href="#">jeffadubois</a></li>
         <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
@@ -52,7 +50,7 @@
 </body>
 
 </html>
-Add Comment Collapse
+
 
 
 
